<resources>
    <string name="app_name">UofM Scheduler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_header">UMich Course Guide</string>

    <string name="select_courses">Select Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="settings">Settings</string>

    <string name="enter_subject">Please enter the subject you would like to view:</string>
    <string name="school">School:</string>
    <string name="subject">Subject:</string>
    <string name="submit">Submit</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
