<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Select_Courses"
            android:icon="@android:drawable/ic_menu_search"
            android:orderInCategory="1"
            android:title="@string/select_courses"/>
        <item
            android:id="@+id/My_Courses"
            android:icon="@android:drawable/ic_menu_save"
            android:orderInCategory="2"
            android:title="@string/my_courses" />
        <item
            android:id="@+id/Settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:orderInCategory="3"
            android:title="@string/settings" />
    </group>

</menu>
