<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <saadandaakash.uofmscheduler.customTextView
        android:id="@+id/enterSubjectMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="24sp"
        android:padding="5dp"
        android:text="@string/enter_subject"/>

    <LinearLayout
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="5dp"
        android:layout_below="@id/enterSubjectMessage"
        android:orientation="horizontal">

        <saadandaakash.uofmscheduler.customTextView
            android:id="@+id/subjectName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"

            android:text="@string/subject"
            android:textSize="16sp"/>

        <saadandaakash.uofmscheduler.ClearableAutoCompleteTextView
            android:id="@+id/enterSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="24dp"

            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"
            android:dropDownHeight="150dp"

            android:imeOptions="actionDone"
            android:textSize="16sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitCourseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subject"
        android:text="@string/submit" />


</RelativeLayout>